--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "10.0.4",
     "next-react-svg": "^1.1.2",
     "react": "17.0.1",
