--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "client": "npm run dev --prefix client",
+    "client": "npm run start --prefix client",
     "server": "node server.js",
-    "app": "concurrently \"npm run server\" \"npm run client\""
+    "app": "concurrently \"npm run server\" \"npm run client\"",
+    "postinstall": "npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
